--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1 class="text-center">Admission Cal</h1>
+                <center>
+                    <h1 class="text-center">Admission Cal</h1><h5><a href="https://forms.gle/11tW3vckaTwg4hKD6">รีวิว</a></h5>
+                </center>
                 <form method="post">
                     <div class="form-group">
                         <label>GPAX</label>
@@ -43,7 +45,8 @@
                         <div id="loop-samun"></div>
                     </div>
                 </form>
-                <button id="result-button" class="btn btn-primary">คำนวณ</button>
+                <hr>
+                <button id="result-button" style="margin-top: 0.1rem;" class="btn btn-primary">คำนวณ</button>
             </div>
         </div>
 
