--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                 </div>
                             </div>
                             <hr>
-                            <input type="button" onclick="alert(getCheckedCheckboxesFor('boxs'));" value="Get Values" />
+                            <input type="button" onclick="getCheckedCheckboxesFor('boxs');" value="Get Values" />
                         </div>
                 </form>
             </div>
