--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
                                 </div>
                             </div>
                             <hr>
-                            <input type="button" onclick="getCheckedCheckboxesFor('boxs');" value="Get Values" />
+                            <input type="button" class="btn btn-primary" onclick="getCheckedCheckboxesFor('boxs');" value="Get Values" />
+                            <br>
+                            <hr>
                         </div>
                 </form>
             </div>
