--- a/cal.html
+++ b/cal.html
@@ -15,7 +15,7 @@
             <div class="col-md-12">
                 <center>
                     <h1 class="text-center">Admission Cal</h1>
-                    <h5><a href="https://forms.gle/11tW3vckaTwg4hKD6">รีวิว</a></h5>
+                    <h5><a href="https://forms.gle/11tW3vckaTwg4hKD6">ให้คะแนน🌟</a></h5>
                 </center>
                 <form method="post">
                     <div class="form-group">
