--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                 </div>
                             </div>
                             <hr>
-                            <input type="button" class="btn btn-primary" onclick="getCheckedCheckboxesFor('boxs');" value="Get Values" />
+                            <input type="button" class="btn btn-primary" onclick="getCheckedCheckboxesFor('boxs');" value="เลือก" />
                             <br>
                             <hr>
                         </div>
@@ -126,7 +126,7 @@
         </div>
 
     </div>
-    <script src="index.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
