--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="col-md-12">
                 <center>
                     <h1 class="text-center">Admission Cal</h1>
-                    <h5><a href="https://forms.gle/11tW3vckaTwg4hKD6">ให้คะแนน🌟</a></h5>
+                    <h5>เลือกวิชาที่ทางคณะต้องการใช้ในการคำนวณแล้วกดปุ่มด้านล่างเพื่อไปยังหน้าคำนวนคะแนน</h5>
                 </center>
                 <form method="post">
                     <div class="form-group">
